# strelka_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/strelka_ros/: a1_transform_publisher.hpp
launch/: a1_livox.launch  a1_normal.launch
src/: a1_command_publisher.cpp  a1_transform_publisher.cpp
src/A1/: a1_command_publisher.cpp
strelka_elevation/: CMakeLists.txt  README.md  filter_plugins.xml  package.xml
strelka_elevation/config/elevation_maps/: a1_map.yaml
strelka_elevation/config/postprocessing/: postprocessor_stairs.yaml  postprocessor_steps.yaml
strelka_elevation/config/robots/: a1.yaml
strelka_elevation/include/strelka_elevation/: ConstInpaint.hpp  MathExpressionFilter.hpp  SDF2D.hpp  SlidingWindowExpressionFilter.hpp  StepFilter.hpp
strelka_elevation/launch/: a1.launch
strelka_elevation/src/: ConstInpaint.cpp  MathExpressionFilter.cpp  SDF2D.cpp  SlidingWindowExpressionFilter.cpp  StepFilter.cpp  plugins.cpp
strelka_ros/: CMakeLists.txt  README.md  package.xml
strelka_ros/config/: a1_full_pipeline.yaml  pipeline_params.yaml
strelka_ros/config/move_base/: common_params.yaml  global_map.yaml  local_map.yaml  trajectory_planner.yaml
strelka_ros/config/move_base/maps/: blank.yaml  navigation_course.yaml
strelka_ros/include/strelka_ros/: ElevationAwareFootPlanner.hpp  SimSlowdown.hpp  TransformPublisher.hpp
strelka_ros/include/strelka_ros/A1/: A1Bridge.hpp  A1CheaterEstimator.hpp  CheaterEstimator.hpp  ElevationAwareLocalPlanner.hpp  RvizVisualizer.hpp  a1_command_publisher.hpp
strelka_ros/launch/: a1_elevation_aware_local_planner.launch  a1_full_pipeline.launch  a1_high_command_publisher.launch  a1_lcm_to_ros_bridge.launch  a1_livox.launch  a1_local_planner.launch  a1_move_base.launch  a1_normal.launch  a1_simulation.launch  a1_state_estimator.launch  a1_wbic.launch  a1_wbic_observer.launch  move_base.launch
strelka_ros/models/: boxes.dae  course.dae  navigation_course.dae  observer_height_test.dae  stairs_reverse.dae  stepping_stones_10cm.dae  stepping_stones_10cm_sparse.dae
strelka_ros/models/stairs/: model.sdf
strelka_ros/rviz/: a1.rviz
strelka_ros/scripts/: plot_costmap.py  strelka_tuning_constraints.py
strelka_ros/src/: ElevationAwareFootPlanner.cpp  TransformPublisher.cpp
strelka_ros/src/A1/: A1Bridge.cpp  A1CheaterEstimator.cpp  CheaterEstimator.cpp  CommandPublisher.cpp  ElevationAwareFootPlanner.cpp  ElevationAwareLocalPlanner.cpp  HighLevelCommandPublisher.cpp  LocalPlanner.cpp  StateEstimator.cpp  TransformPublisher.cpp  WBIC.cpp  a1_transform_publisher.cpp
strelka_ros/worlds/: boxes_course.world  empty.world  hard_course.world  navigation_course.world  observer_height_test.world  single_step.world  stairs.world  stairs_reflective.world  stairs_reverse.world  stepping_stones_10cm.world  stepping_stones_10cm_sparse.world
urdf/: a1_livox.xacro
